[tool.poetry]
name = "mkdocutils"
version = "0.1.0"
description = ""
authors = ["Alexander Pushkov <alexander@notpushk.in>"]

[tool.poetry.dependencies]
python = "^3.8"
docutils = "^0.16"
jinja2 = "^2.11.2"
click = "^7.1.2"
Jinja2 = ">=2.10.1"
livereload = ">=2.5.1"
lunr = {version = "0.5.8", extras = ["languages"]}
Markdown = ">=3.2.1"
PyYAML = ">=3.10"
tornado = ">=5.0"
ghp-import = ">=1.0"
pyyaml_env_tag = ">=0.1"

[tool.poetry.dev-dependencies]
flakehell = "^0.9.0"
mypy = "^0.780"
wemake-python-styleguide = "^0.14.0"
add-trailing-comma = "^2.0.1"
autopep8 = "^1.5.3"
isort = "^4.3.21"
rope = "^0.17.0"

[tool.poetry.plugins."console_scripts"]
mkdocutils = "mkdocutils.__main__:cli"

[tool.poetry.plugins."mkdocs.themes"]
mkdocs = "mkdocutils.themes.mkdocs"
readthedocs = "mkdocutils.themes.readthedocs"

[tool.flakehell]
baseline = ".flakehell_baseline"
exclude = [".venv/**"]

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
mccabe = ["+*"]
nitpick = ["+*"]
"pep8-naming" = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
"wemake-python-styleguide" = ["+*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
